--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+itertools = "0.14.0"
 kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst" }
 kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg" }
-sha2 = "0.10.8"
+sha2 = { version = "0.10.8", features = ["compress"] }
