--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Clippy
       run: cargo clippy # -- -D warnings
     - name: Test
-      run: cargo test
+      run: cargo nextest run
