--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         profile: minimal
         toolchain: stable
+        components: nextest
     - name: Build
       run: cargo build
     - name: Clippy
