Revert "use nextest"
This reverts commit 80d38c2385a13f3a4814680e49114288a7d3bb60.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Clippy
       run: cargo clippy # -- -D warnings
     - name: Test
-      run: cargo nextest run
+      run: cargo test
