Implement PoW hashing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/verifier.rs"
 
 
 [dependencies]
+bytemuck = "1.21.0"
 itertools = "0.14.0"
 kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst" }
 kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg" }
