--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,10 @@ itertools = "0.14.0"
 kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst" }
 kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg" }
 sha2 = { version = "0.10.8", features = ["compress"] }
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "proving"
+harness = false
