--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ sha2 = { version = "0.10.8", features = ["compress"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
+test-case = "3.3.1"
 
 [[bench]]
 name = "proving"
