--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bytemuck = "1.21.0"
 itertools = "0.14.0"
 kzg = { git = "https://github.com/marmistrz/rust-kzg.git", package = "rust-kzg-blst" }
 kzg_traits = { git = "https://github.com/marmistrz/rust-kzg.git", package = "kzg" }
+rayon = "1.10.0"
 sha2 = { version = "0.10.8", features = ["compress"] }
 
 [dev-dependencies]
