Use parallel rust-kzg

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,17 @@ path = "src/verifier.rs"
 
 
 [dependencies]
+kzg = { git = "https://github.com/marmistrz/rust-kzg.git", package = "rust-kzg-blst", features = [
+    "parallel",
+] }
 anyhow = "1.0.97"
 bytemuck = "1.21.0"
 clap = { version = "4.5.35", features = ["derive"] }
 itertools = "0.14.0"
-kzg = { git = "https://github.com/marmistrz/rust-kzg.git", package = "rust-kzg-blst" }
-kzg_traits = { git = "https://github.com/marmistrz/rust-kzg.git", package = "kzg" }
+
+kzg_traits = { git = "https://github.com/marmistrz/rust-kzg.git", package = "kzg", features = [
+    "parallel",
+] }
 rayon = "1.10.0"
 sha2 = { version = "0.10.8", features = ["compress"] }
 
