--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/verifier.rs"
 
 
 [dependencies]
-kzg = { git = "https://github.com/marmistrz/rust-kzg.git", package = "rust-kzg-blst", features = [
+kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst", features = [
     "parallel",
 ] }
 anyhow = "1.0.97"
@@ -21,7 +21,7 @@ bytemuck = "1.21.0"
 clap = { version = "4.5.35", features = ["derive"] }
 itertools = "0.14.0"
 
-kzg_traits = { git = "https://github.com/marmistrz/rust-kzg.git", package = "kzg", features = [
+kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg", features = [
     "parallel",
 ] }
 rayon = "1.10.0"
