--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "
 ] }
 rayon = "1.10.0"
 sha2 = { version = "0.10.8", features = ["compress"] }
+humansize = "2.1.3"
 
 [dev-dependencies]
 criterion = "0.5.1"
