--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ humansize = "2.1.3"
 serde = { version = "1.0.219", features = ["serde_derive"] }
 bincode = { version = "2.0.1", features = ["serde"] }
 serde_json = "1.0.140"
+hex = "0.4.3"
 
 [dev-dependencies]
 criterion = "0.5.1"
